
####   Don't forget to change the version number in configure.ac!   ####

19 Dec 2004 dasdinit VOL1 and linux vtoc tweaks - Greg Smith
16 Dec 2004 Fix BRXHG and BRXLG to branch backwards too - Greg Smith
14 Dec 2004 Ensure dyncrypt is built *AFTER* core - Ivan Warren
14 Dec 2004 cckd garbage collector fix - Greg Smith
14 Dec 2004 Bug in utf xlations, cc2 was never reached - Bernard van der Helm
10 Dec 2004 ppc assembler assists for cmpxchg1, cmpxchg4 - Greg Smith
08 Dec 2004 dasdinit -linux option support - Greg Smith
06 Dec 2004 Keep crx in sync with INST_SPACE - Jan Jaeger
04 Dec 2004 Make chkdsk faster if disk is readonly - Greg Smith
03 Dec 2004 Optimize clearing memory - Greg Smith
02 Dec 2004 Fix ref & change recording in relation to SSKE/RRBE - Jan Jaeger
02 Dec 2004 Fix SIE guest timer interrupt handling - Jan Jaeger
30 Nov 2004 Use SLEEP() to ensure sleep for `n' seconds - Greg Smith
30 Nov 2004 Get mainstor after device initialization - Greg Smith
29 Nov 2004 Fix reference and change recording in dat-off mode - Jan Jaeger
28 Nov 2004 Binary Floating Point feature completed - Roger Bowler
28 Nov 2004 TBEDR,TBDR instructions - Roger Bowler
26 Nov 2004 Improve stack access - Jan Jaeger
25 Nov 2004 Fix MCK in ECPS:VM - Ivan Warren
23 Nov 2004 Improve access register translation - Jan Jaeger
22 Nov 2004 Fix incorrect protection/access in ar mode - Jan Jaeger
21 Nov 2004 Correction to TRTR - Roger Bowler
20 Nov 2004 Add CHSC commands for linux/390 - Jan Jaeger
19 Nov 2004 Document OSTAILOR QUIET - Ivan Warren
18 Nov 2004 Fix zero ilc & pgm oldpsw problem - Jan Jaeger
18 Nov 2004 DIEBR,DIDBR instructions - Roger Bowler
18 Nov 2004 VPATH Build enablement - Ivan Warren
17 Nov 2004 Fix instruction operand trace display - Jan Jaeger
17 Nov 2004 MADBR,MADB,MAEBR,MAEB,MSDBR,MSDB,MSEBR,MSEB instructions - Roger Bowler
16 Nov 2004 MXDBR,MXDB,MDEBR,MDEB instructions - Roger Bowler
15 Nov 2004 LDXBR,LEXBR,CXFBR,CXGBR,CFXBR,CGXBR instructions - Roger Bowler